--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -7,8 +7,8 @@ from the CDC. Our model estimates the effect of cancer type and cluster-specific
 cancer effects independently, resulting in a cancer and cluster-specific
 estimate of the aging rate multiplier, $k$.
 
-To illustrate the model, in **Figure 5A** we simulate survival time curves
-for four related groups. We start with a cohort of women aged 30 and show their
+To illustrate the model, we simulate survival time curves
+for four related groups (**figure 5A**. We start with a cohort of women aged 30 and show their
 expected survival (light blue). By setting their cancer rate multiplier to $k=2$
 we can simulate the effect of a moderately deadly cancer (yellow). Compare this
 to a randomly selected group of women ranging in age from 30 to 70 years old
@@ -25,7 +25,7 @@ cat("\\newpage")
 ```
 
 #### Figure 5
-```{r child='../code/survival/survfig.Rmd'}
+```{r child='../code/survival/figure5.Rmd'}
 ```
 
 **Figure 5: Comparison of different cancers, simulated and actual results
@@ -49,7 +49,7 @@ cat("\\newpage")
 ```
 
 We found that cancer types, as expected, have a range of prognoses relative to
-the general population. In **Figure 5B-E** we see three particularly deadly
+the general population. In **figure 5B-E** we see three particularly deadly
 cancers (Stomach:STAD, Glioblastoma:GBM, and Pancreatic:PAAD), and one cancer
 where diagnosis apparently decreases risk relative to background (Thyroid:
 THCA). Cancers with posterior probability for relative risk of less than 1 such
@@ -67,8 +67,8 @@ the comparison group, even if it decreases the expectation of life of the
 individual relative to the counterfactual where they did not have cancer.
 
 The degree to which a given cancer accelerates aging can be determined by the
-$k_{tis}$ multiplier (**Figure 5F**) multiplied by the cluster modifier $k_{cl}$
-(**Figure 6**). Looking at the tissue specific multiplier, the least deadly was
+$k_{tis}$ multiplier (**figure 5F**) multiplied by the cluster modifier $k_{cl}$
+(**figure 6**). Looking at the tissue specific multiplier, the least deadly was
 prostate cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a
 risk multiplier of between 15 and 22 relative to the background risk of death in
 the population. This undoubtedly is influenced by the fact that relatively young
@@ -84,7 +84,7 @@ cat("\\newpage")
 
 #### Figure 6
 
-```{r child='../code/figure9.Rmd'}
+```{r child='../code/figure6.Rmd'}
 ```
 
 **Figure 6 Cluster specific $k_{cl}$ values for each cancer type.** The overall
@@ -103,7 +103,7 @@ cat("\\newpage")
 
 Our estimates of tissue-specific cluster effects, in contrast, ranged from less
 than 1 up to about 3 or 4, reflecting that some clusters are either less deadly
-or more deadly than other clusters within each cancer type (**Figure 6**). A
+or more deadly than other clusters within each cancer type (**figure 6**). A
 cluster-specific rate of 1 represents the typical rate for this tissue type. For
 several cancers (_e.g._ PRAD, kidney chromophobe (KICH), diffuse large B-cell
 lymphoma (DBLC), thyroid cancer (THCA)) the posterior estimates are largely
