--- a/text/supplemental_methods.Rmd
+++ b/text/supplemental_methods.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Supplementary methods"
 author: "Peter T. Nguyen, Simon G. Coetzee, Daniel L. Lakeland, and Dennis J. Hazelett"
-date: "8/24/2020"
 bibliography: references.bib
 output:
   word_document:
@@ -203,6 +202,28 @@ males and females of European descent.
 ```{r, results='asis'}
 cat("\\newpage")
 ```
+
+### Figure SM3
+```{r}
+
+
+pritis = ggplot(data.frame(x=0:30),aes(x)) + stat_function(fun=function(x) dgamma(x,1.2,.2),geom="area",fill="#666699")+
+coord_cartesian(xlim=c(0,20),ylim=c(0,1))+labs(title="Prior for ktis",x="ktis")
+pricl = ggplot(data.frame(x=0:30),aes(x)) + stat_function(fun=function(x) dgamma(x,3.5,2.5),geom="area",fill="#666699")+
+coord_cartesian(xlim=c(0,20),ylim=c(0,1))+labs(title="Prior for kclass",x="kclass")
+print(pritis+pricl)
+
+```
+
+Priors for the tissue and class coefficients. The tissue coefficient
+is chosen to admit parameter values across a range from near 0 to 20+
+in the high density region, reflecting the wide variety of severities
+across tissue type. Within a given tissue, the class k parameter
+multiplies the tissue k and is given a peak density at 1, and a
+credible range from near 0 to 5, reflecting our expectation of a
+moderate amount of variation across the classes.
+
+
 
 As an aside, we did not explicitly account for stage at diagnosis in our model
 for the following reasons. In the tumor sample data, stage at diagnosis is
